language/tests/error/TypeError06.sl
def main() {
  defineFunction(3);
}  
